--- a/loja.html
+++ b/loja.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Travel</title>
+		<title>Avitrata - Loja</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
@@ -57,7 +57,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">Sobre Nós</a></li>
 							<li><a href="loja.html">Loja</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="contact.html">Contactos</a></li>
 						</ul>
 					</nav><!-- #nav-menu-container -->
 				</div>
